# gnostr-get-relays

./: .gitignore  Cargo.toml  GNUmakefile  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
src/: gnostr-get-relays.c  lib.rs  main.rs
