[package]
name = "gnostr-get-relays"
version = "0.0.6"
edition = "2021"
authors = ["gnostr <admin@gnostr.org>"]
description = "gnostr-get-relays: part of the gnostr workflow commands"
repository = "https://github.com/gnostr-org/gnostr-get-relays"
homepage = "https://github.com/gnostr-org/gnostr-get-relays"
documentation = "https://docs.rs/gnostr-get-relays"
readme = "README.md"
keywords = ["nostr", "gnostr", "git", "ffi"]
license = "MIT"
build = "build.rs"

[dependencies]
getopts = "0.2.21"
libc = "0.2"

[build-dependencies]
cc = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
